<resources>
    <string name="app_name">SimpleReader</string>
    <string name="mi_estante">Mi Estante</string>
    <string name="favoritos">Favoritos</string>
    <string name="editar">Editar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="perfil">Perfil</string>
    <string name="guardar">GUARDAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="nuevo_nombre_de_usuario">Nuevo nombre de usuario</string>
    <string name="banner">Banner</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="entra">Entra</string>
    <string name="ya_tienes_una_cuenta">Ya tienes una cuenta?</string>
    <string name="registrar">registrar</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo">Correo</string>
    <string name="registrate">Registrate</string>
</resources>