<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chainsaw_man_panel_autronautas"
    tools:context=".EditarPerfil">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="30dp"
                android:layout_gravity="center"
                android:alpha="0.9"
                app:cardElevation="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/custom_edittexto"
                    android:orientation="vertical"
                    android:padding="24dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/banner"
                        android:gravity="center"
                        android:textSize="30sp"
                        android:textColor="@color/secondaryDark2"
                        android:fontFamily="casual"
                        android:textStyle="bold"/>

                    <ImageView
                        android:id="@+id/editUserBanner"
                        android:layout_width="300dp"
                        android:layout_height="200dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/chainsaw_man_panel_autronautas"
                        android:layout_margin="10dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nombre_de_usuario"
                        android:gravity="center"
                        android:textSize="30sp"
                        android:layout_marginTop="20sp"
                        android:textColor="@color/secondaryDark2"
                        android:fontFamily="casual"
                        android:textStyle="bold"/>

                    <EditText
                        android:id="@+id/editUserName"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/custom_edittexto"
                        android:focusable="true"
                        android:hint="@string/nuevo_nombre_de_usuario"
                        android:padding="8dp"
                        android:textColor="@color/black" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnGuardarEdit"
                            android:layout_width="145dp"
                            android:layout_height="50dp"
                            android:background="@drawable/btn_shape"
                            android:fontFamily="casual"
                            android:text="@string/guardar"
                            android:textSize="15sp"
                            android:layout_gravity="left"
                            android:textStyle="bold|italic"
                            app:cornerRadius="20dp" />

                        <Button
                            android:id="@+id/btnCancelarEdit"
                            android:layout_width="145dp"
                            android:layout_height="50dp"
                            android:background="@drawable/btn_shape"
                            android:fontFamily="casual"
                            android:text="@string/cancelar"
                            android:textSize="15sp"
                            android:layout_marginLeft="5dp"
                            android:textStyle="bold|italic"
                            app:cornerRadius="20dp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </ScrollView>

</LinearLayout>